fix axe issues with color contrast, multiple main regions

--- a/src/components/MainNav/MainNav.css
+++ b/src/components/MainNav/MainNav.css
@@ -8,9 +8,12 @@
   border-bottom: 1px solid var(--color-border);
   flex: 0 0 auto;
   padding: 0 6px;
-  background-color: #f7f7f7;
   z-index: 99999;
   position: relative;
+}
+
+.navSection {
+  background-color: #f7f7f7;
 }
 
 .nowrap {
@@ -28,14 +31,6 @@
     position: relative;
     top: 0;
   }
-}
-
-.navigationHeadline {
-  position: absolute;
-  height: 1px;
-  width: 1px;
-  clip-path: polygon(0 0, 0 0, 0 0);
-  overflow: hidden;
 }
 
 @media (--medium-down) {
